--- a/home_page.css
+++ b/home_page.css
@@ -7,7 +7,9 @@ body{
     background-color: #EEEEEE;
 
 }
-
+.top_margin{
+   margin-top: 20px;
+}
 /* navbar */
 
 .navbar{
@@ -45,8 +47,10 @@ body{
 
 /* search container */
 
-.search-container{
-
+.search_box{
+  background-image: url("https://cdn.pixabay.com/photo/2021/01/19/18/45/field-5932123_960_720.jpg");
+  width: 100%;
+  height: 500px;
 }
 
 
@@ -56,7 +60,7 @@ body{
     width: 90%;
     margin: auto;
     border: 1px solid black;
-    height: 300px;
+   
 }
 
 .first-flex{
@@ -74,4 +78,41 @@ body{
     
     padding: 2%;
     /* justify-content: space-between; */
+}
+
+
+/* footer started */
+a {
+    text-decoration: none;
+    color: #31b5f3;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+footer{
+    display: flex;
+    width: 100%;
+    height: 300px;
+    padding-bottom: 20px;
+    /* border: 1px solid black; */
+    justify-content: space-between;
+    padding-right: 1%;
+}
+
+.footer_item li{
+    list-style: none;
+    margin-top: 10px;
+    font-size: 13px;
+
+}
+.footer_item >div{
+    font-weight: 600;
+}
+.text_center{
+    text-align: center;
+}
+.small_font {
+    font-size: 14px;
+    color: rgb(75, 74, 74);
 }
