--- a/home_page.css
+++ b/home_page.css
@@ -55,12 +55,12 @@ body{
   width: 100%;
   height: 500px;
   /* padding: 50px 5% 50px 5%; */
-  padding-left: 5%;
-  padding-top: 50px;
+  padding: 50px 5% 50px 5%;
+  /* padding-top: 50px; */
 }
 #search_container{
     padding: 10px;
-    width: 95%;
+    width: 100%;
     border: 3px solid red;
     height: 300px;
     background-color: white;
@@ -80,12 +80,14 @@ body{
 
 .plans{
     width: 15%;
+    
 }
 .plans button{
     width: 100%;
     padding: 20px 0px 5px 0px;
     box-sizing: border-box;
     border: none;
+    background-color: white;
 
 }
 
@@ -93,18 +95,59 @@ body{
    border-bottom: 2px solid black;
 }
 
-#stays_plans{
+ /* info box is an input box */
+
+#info{
     width: 100%;
-    height: 200px;
-    border: 2px solid black;
-    padding: 20px;
+    height: 100px;
+    /* border: 2px solid black; */
+    padding: 20px 2% 0px 2% ;
 }
-#feachers{
+
+#forms{
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    border: 3px solid green;
     display: flex;
+    justify-content: space-between;
+
+}
+#forms div{
+    /* flex-grow: 1; */
+    height: 100%;
+    border: 1px solid black;
+    width: 23%;
 }
 
 
 
+.inpt_item{
+    height: 100%;
+    width: 100%;
+    
+}
+
+/* below is search button's div */
+
+#search_btn{
+    width: 17%;
+    margin:50px auto;
+   
+}
+#search_btn button{
+    width: 100%;
+    height: 100%;
+    background-color: #df346d;
+    font-size: 17px;
+    color: white;
+    border: none;
+    padding: 15px 0px;
+}
+
+.white_text{
+    color: white;
+}
 /* main body started */
 
 .main-body{
