--- a/home_page.css
+++ b/home_page.css
@@ -3,6 +3,9 @@
     margin: 0px;
     padding: 0px;
 }
+h1, h2, h3, p{
+    font-family: 'Noto Sans Display', sans-serif;
+}
 body{
     background-color: #EEEEEE;
 
@@ -14,7 +17,7 @@ body{
 
 .navbar{
    display: flex;
-   background-color: #1A237E ;
+   background-color: #0e112c ;
    padding: 12px 5%;
   
 }
@@ -51,7 +54,7 @@ body{
 /* search container */
 
 #big_img{
-  background-image: url("https://cdn.pixabay.com/photo/2021/01/19/18/45/field-5932123_960_720.jpg");
+  background-image: url("https://forever.travel-assets.com/flex/flexmanager/images/2020/07/31/ORB_Deals_v3_lpheroB_1680x945_20200730.jpg?impolicy=fcrop&w=900&h=506&q=mediumHigh");
   width: 100%;
   height: 500px;
   /* padding: 50px 5% 50px 5%; */
@@ -66,9 +69,12 @@ body{
     background-color: white;
 
 }
+
+
 #plans_box{
     display: flex;
     justify-content: space-between;
+    /* position: relative; */
     /* padding: 10px;
     width: 95%;
     border: 3px solid red;
@@ -80,6 +86,14 @@ body{
 
 .plans{
     width: 15%;
+    position: relative;
+    
+}
+
+.fa {
+    position: absolute;
+    left: 45%;
+    color: #555555;
     
 }
 .plans button{
@@ -88,6 +102,7 @@ body{
     box-sizing: border-box;
     border: none;
     background-color: white;
+    cursor: pointer;
 
 }
 
@@ -168,6 +183,7 @@ body{
    
 }
 
+
 .first-flex{
     display: flex;
     margin: 20px 0px;
@@ -175,6 +191,7 @@ body{
     border: 1px solid red;
     /* height: 100px; */
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .item1{
@@ -187,8 +204,227 @@ body{
     width: 100%;
 }
 
+/* what's new layout started */
+
+#whats_new{
+    width: 100%;
+    /* height: 400px; */
+    /* border: 2px solid red; */
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 180px);
+    gap: 15px;
+}
+ 
+#whats_new div:nth-child(1){
+    grid-area: 1/ 1/3/3;
+}
+.left_img{
+   width: 100%;
+   height: 70%;
+}
+.planning{
+    margin: 15px 0px 10px 2%;
+}
+.new_items{
+    border: 1px solid black;
+    background-color: white;
+}
+.new_items div:nth-child(1){
+    width: 30%;
+    height: 100%;
+    border: 2px solid grey;
+}
+.right_img{
+    width: 100%;
+    height: 100%;
+}
+
+.new_items div:nth-child(2){
+    width: 65%;
+    height: 100%;
+    margin-left: 2%;
+    border: 2px solid grey;
+    padding: 30px 3% 30px 3%;
+}
+.inl_block{
+    display: inline-block;
+    vertical-align: top;
+}
+.right_para{
+    margin-top: 20px;
+}
+/* <!-- properties with added perks --> */
+
+#featured{
+    width: 74%;
+    height: 250px;
+    border: 2px solid gray;
+    margin-top: 50px;
+    padding: 1%;
+    margin-bottom: 20px;
+    background-image: url("https://forever.travel-assets.com/flex/flexmanager/images/2021/06/23/ORB_JetReset_lpheroB_1680x945_20210623.jpg?impolicy=fcrop&w=900&h=506&q=mediumHigh");
+}
+.color_white{
+    color: white;
+
+}
+
+.inl_block_botom{
+    margin-top: 20%;
+}
+.text_bottom{
+   
+    margin-top: 30%;
+}
+
+/* Travel tips from the pros */
+
+.national{
+    display: flex;
+    width: 100%;
+    height: 200px;
+    border: 2px solid red;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    justify-content: space-between;
+}
+.travel_tips{
+    height: 100%;
+    width: 32%;
+    border: 2px solid gray;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+.national_img{
+    width: 100%;
+    height: 80% ;
+    padding: 5%;
+    /* background-color: gray; */
+}
+
+#national_park{
+    background-image: url("https://th.bing.com/th/id/OIP.6ITHElgbLXrJB1eGap8XTwHaEc?w=292&h=180&c=7&r=0&o=5&pid=1.7");
+}
+#hangouts{
+    background-image: url("https://th.bing.com/th/id/OIP.jP4Hkz1JJqroE2fNUrdAoQHaE8?pid=ImgDet&rs=1");
+}
+
+#road_trip{
+    background-image: url("https://th.bing.com/th/id/OIP.r9M2o78wtd4gVABYzinyowHaEL?pid=ImgDet&rs=1");
+}
+.national_para{
+    padding: 3%;
+
+}
+
+
+
+/* Vacation your way */
+
+
+#vacation{
+    width: 100%;
+    height: 200px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+
+}
+.vacation_item{
+    width: 16%;
+    height: 100%;
+    border: 1px solid red;
+    position: relative;
+}
+.vacation_item >img{
+    width: 100%;
+    height: 100%;
+}
+
+.position_abs{
+    position: absolute;
+    left: 30%;
+    top: 45%;
+}
+
+
+/* <!-- download orbitz app --> */
+
+#download{
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+    display: grid;
+    width: 100%;
+    height: 370px;
+    background-color: white;
+    grid-template-columns: 35% 32% 32%;
+    grid-template-rows: 370px;
+}
+#download div:nth-child(2){
+    grid-area: 1/2/2/4;
+    padding: 4% 3%;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    
+}
+
+.app_items{
+    border: 1px solid red;
+    position: relative;
+}
+
+.download_items{
+    border: 2px solid black;
+}
+.download_items img{
+    width: 100%;
+    height: 100%;
+}
+
+.big_font{
+    font-size: 27px;
+    font-weight: 600;
+}
+.add_margin{
+    margin-left: 3%;
+    margin-top: 2%;
+}
+#phone{
+    width: 80%;
+    height: 50px;
+    padding: 2% 4%;
+    letter-spacing: 1px;
+    outline: none;
+}
+.mobile{
+    display: inline-block;
+    width: 45%;
+    /* padding: 10px 20px; */
+}
+
+#last_btn{
+    width: 70%;
+    height: 50px;
+    background-color: #df346d;
+    color: white;
+    border: none;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+.scan  img{
+   width: 80%;
+   height: 150px;
+   position: absolute;
+   /* background-color: yellow; */
+}
+
 
 /* footer started */
+
 a {
     text-decoration: none;
     color: #31b5f3;
@@ -201,6 +437,7 @@ footer{
     display: flex;
     width: 100%;
     height: 300px;
+    margin-top: 30px;
     padding-bottom: 20px;
     /* border: 1px solid black; */
     justify-content: space-between;
@@ -222,4 +459,11 @@ footer{
 .small_font {
     font-size: 14px;
     color: rgb(75, 74, 74);
+}
+.small_text{
+    font-size: 13px;
+}
+
+.empty_div{
+    height: 100px;
 }
